Upgrade backend to /2 apis. The client is now horribly broken, but that's why we have feature branches. [rev: matthew.gordon]